import aQute.bnd.gradle.Bundle
import org.gradle.internal.os.OperatingSystem

plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'jacoco'
//    id 'com.github.kt3k.coveralls' version '2.12.2'
    id 'biz.aQute.bnd.builder' version '5.1.2'
    id "org.gradle.test-retry" version "1.6.2"
    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
    id 'signing'
}

def jarVersion = "2.23.1"

def buildEvent = System.getenv("BUILD_EVENT")
def isRelease = buildEvent == "release"
def brn = System.getenv("BRANCH_REF_NAME")
def snap = brn == null || brn.equals("") ? "-SNAPSHOT" : "." + brn + "-SNAPSHOT"

// version is the variable the build actually uses.
version = isRelease ? jarVersion : jarVersion + snap

archivesBaseName = 'jnats'
group = 'io.nats'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

repositories {
    gradlePluginPortal()
    mavenCentral()
    maven { url "https://repo1.maven.org/maven2/" }
    maven { url "https://central.sonatype.com/repository/maven-snapshots/" }
    maven { url "https://oss.sonatype.org/content/repositories/releases/" }
    mavenLocal()
}

dependencies {
    implementation 'org.bouncycastle:bcprov-lts8on:2.73.8'
    implementation 'org.jspecify:jspecify:1.0.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
    testImplementation 'io.nats:jnats-server-runner:3.0.1'
    testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.12.3'
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java','src/examples/java']
        }
    }
    test {
        java {
            srcDirs = ['src/test/java']
        }
    }
}

tasks.register('bundle', Bundle) {
    from sourceSets.main.output
    exclude("io/nats/examples/**")
}

jar {
    manifest {
        attributes('Automatic-Module-Name': 'io.nats.jnats')
    }
    bnd (['Implementation-Title': 'Java Nats',
          'Implementation-Version': jarVersion,
          'Implementation-Vendor': 'nats.io',
          "Import-Package": "!org.bouncycastle:bcprov-lts8on"]
    )
    exclude("io/nats/examples/**")
}

test {
    useJUnitPlatform()
    maxHeapSize = "2g"
    testLogging {
        exceptionFormat = 'full'
        events "started", "passed", "skipped", "failed"
        showStandardStreams = true
    }
    retry {
        failOnPassedAfterRetry = false
        maxFailures = 4
        maxRetries = 4
    }
    maxParallelForks = Runtime.runtime.availableProcessors()
    systemProperty 'junit.jupiter.execution.timeout.default', '3m'
}

javadoc {
    options.overview = 'src/main/javadoc/overview.html' // relative to source root
    options.memberLevel = JavadocMemberLevel.PUBLIC
    source = sourceSets.main.allJava
    title = "NATS.IO Java API"
    excludes = [
            "io/nats/client/impl",
            "io/nats/examples",
            "io/nats/client/api/ConsumerCreateRequest.java",
            "io/nats/client/api/MessageGetRequest.java",
            "io/nats/client/api/MessageDeleteRequest.java",
            "io/nats/client/support/IncomingHeadersProcessor.java",
            "io/nats/client/support/**",
            "**/Debug**"
    ]
    classpath = sourceSets.main.runtimeClasspath
    doLast {
        if (!OperatingSystem.current().isWindows()) {
            exec {
                println "Updating favicon on all html files"
                workingDir 'build/docs/javadoc'
                // Only on linux, mac at this point
                commandLine 'find', '.', '-name', '*.html', '-exec', 'sed', '-i', '-e', 's#<head>#<head><link rel="icon" type="image/ico" href="favicon.ico">#', '{}', ';'
            }
            copy {
                println "Copying images to javadoc folder"
                from 'src/main/javadoc/images'
                into 'build/docs/javadoc'
            }
        }
    }
}

tasks.register('examplesJar', Jar) {
    archiveClassifier.set('examples')
    manifest {
        attributes('Implementation-Title': 'Java Nats Examples',
                'Implementation-Version': jarVersion,
                'Implementation-Vendor': 'nats.io')
    }
    from(sourceSets.main.output) {
        include "io/nats/examples/**"
    }
}

tasks.register('javadocJar', Jar) {
    archiveClassifier.set('javadoc')
    from javadoc
}

tasks.register('sourcesJar', Jar) {
    archiveClassifier.set('sources')
    from sourceSets.main.allSource
}

tasks.register('testsJar', Jar) {
    archiveClassifier.set('tests')
    from sourceSets.test.allSource
}

// run build before running fat jar to get classes
tasks.register('fatJar', Jar) {
    archiveClassifier.set('fat')
    manifest {
        attributes('Implementation-Title': 'Java Nats With Dependencies',
                'Implementation-Version': jarVersion,
                'Implementation-Vendor': 'nats.io')
    }
    from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

jacoco {
    toolVersion = "0.8.6"
}

jacocoTestReport {
    reports {
        xml.required = true // coveralls plugin depends on xml format report
        html.required = true
    }
    afterEvaluate { // only report on main library not examples
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    '**/examples/**', 'io/nats/client/tests/**', 'io/nats/client/support/Debug*'
                    ])
        }))
    }
}

artifacts {
    archives javadocJar, sourcesJar, examplesJar, testsJar
}

nexusPublishing {
    repositories {
        sonatype {
            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
            username = System.getenv('OSSRH_USERNAME')
            password = System.getenv('OSSRH_PASSWORD')
        }
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifact sourcesJar
            artifact examplesJar
            artifact javadocJar
            artifact testsJar
            pom {
                name = 'jnats'
                packaging = 'jar'
                groupId = group
                artifactId = archivesBaseName
                description = 'Client library for working with the NATS messaging system.'
                url = 'https://github.com/nats-io/nats.java'
                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }
                developers {
                    developer {
                        id = "synadia"
                        name = "Synadia"
                        email = "info@synadia.com"
                        url = "https://nats.io"
                    }
                }
                scm {
                    url = 'https://github.com/nats-io/nats.java'
                }
            }
        }
    }
}

if (isRelease) {
    signing {
        def signingKeyId = System.getenv('SIGNING_KEY_ID')
        def signingKey = System.getenv('SIGNING_KEY')
        def signingPassword = System.getenv('SIGNING_PASSWORD')
        useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
        sign configurations.archives
        sign publishing.publications.mavenJava
    }
}
